# TinkerNav-Backend

./: .env  Cargo.toml  Dockerfile  README.md
.devcontainer/: Dockerfile-dev  devcontainer.json  docker-compose-dev.yml
.github/workflows/: rust.yml
migrations/2023-08-22-185901_init/: up.sql
migrations/2023-08-22-191525_change_password_hash_length/: down.sql  up.sql
migrations/2023-08-22-193545_use_uuid/: down.sql  up.sql
migrations/2023-08-22-214312_rename_table_user/: down.sql  up.sql
migrations/2023-09-14-031038_bot_table/: down.sql  up.sql
migrations/2023-09-14-033542_bot_api_token/: down.sql  up.sql
migrations/2023-09-14-035629_persons_rename/: down.sql  up.sql
migrations/2023-09-14-040303_bot_uuid/: down.sql  up.sql
migrations/2023-09-14-185739_bot_api_uuid/: down.sql  up.sql
model/: base.rs
src/: lib.rs  main.rs  schema.rs
src/auth/: api.rs  errors.rs  login.rs  mod.rs  models.rs  token.rs  utils.rs
src/bots/: midjourney.rs  midjourney_bot.rs  mod.rs  router.rs
src/config/: mod.rs
src/states/: database_connection.rs  mod.rs  nats_connection.rs
src/type_sys/: types.rs
src/user/: mod.rs  model.rs
