[package]
name = "tinker_nav_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
rocket_codegen = "=0.5.0-rc.3"
nats = "0.24.0"
log = "0.4"
fern = "0.5"
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"