[package]
name = "tinker_nav_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["cookies"] }
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99.0"
diesel = { version = "2.1.0", features = ["postgres", "uuid", "r2d2"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
bcrypt = "0.15"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
nats = "0.24.0"
env_logger = "0.10.0"
